fixed code tabwrap

--- a/css/default.css
+++ b/css/default.css
@@ -186,10 +186,14 @@ h3.about {color:#777;margin-top:20px;font-size:22px;margin-bottom:10px}
 }
 
 footer{
-    font-size: 14px;
+    font-size: 12px;
 }
 
 footer img{
-    display: inline;;
+    display: inline !important;
     margin: 0;
+}
+
+.prettyprint{
+    tab-size: 4;
 }
